--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,39 @@ body {
 .muti-select {
   height: 100px;
 }
+
+.left-right {
+  display: flex;
+  width: 100%;
+  margin: auto;
+  height: 500px;
+}
+.left {
+  width: 50%;
+  background-color: cornflowerblue;
+}
+.right {
+  width: 50%;
+  background-color: cyan;
+}
+.txt {
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.white {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  word-break: break-word;
+  background-color: red;
+}
+.white > button {
+  width: 10%;
+  height: 50%;
+}
+.white h1 {
+  margin: 0;
+}
