--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,33 @@ h1 {
   right: 25px;
   top: 40px;
 }
+
+.dnd {
+  width: 1920px;
+  display: flex;
+  justify-content: space-between;
+}
+.dnd__left,
+.dnd__right {
+  width: 300px;
+  height: 800px;
+  background-color: darkslateblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+.dnd__right {
+  background-color: coral;
+}
+.dnd__items {
+  width: 100px;
+  height: 100px;
+  background-color: greenyellow;
+  color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #2d588a;
+  border-radius: 5px;
+}
