--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ h1 {
   color: red;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   border: 1px solid #2d588a;
   border-radius: 5px;
 }
